@@ -483,6 +483,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 1103) Fix up redirect handling for images, categories
   Redirects are now followed from the top-level, outside of the Article
   content loading and viewing, for clarity and consistency.
+* (bug 4104) 'OutputPageBeforeHTML' hook to postprocess article HTML on
+  page view (comes after parser cache, if used). Patch by ThomasV.
 * Linker::formatComment corrupted the passed title object on PHP 5
   if the comment included a section link. Use clone() to make a safe copy.
 * Add wfClone() wrapper since we're still using PHP 4 on some servers.
